--- a/ArrestGates.css
+++ b/ArrestGates.css
@@ -163,7 +163,7 @@ h1{
 
 }
 p2 {
-    font-family: 'Boohong', cursive;
+    font-family: 'Boohong',  Georgia, 'Times New Roman', Times, serif;
     font-size: 1.2rem;
     color: rgb(234, 211, 8);
     text-align: center;
